objects/SaiObj4__c.object
<CustomObject>
    <fields>
        <fullName>field1__c</fullName>
        <label>field1</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field2__c</fullName>
        <label>field2</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field3__c</fullName>
        <label>field3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>123</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SaiObj4</label>
    <nameField>
        <label>SaiObj4 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SaiObj4s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>